OA-188 optimize spacing in main menu and fixes media query comments

--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_navigation.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_navigation.scss
@@ -11,7 +11,7 @@
     background-color: #F9F9F9;
     &__row {
       display: flex;
-      margin: -20px -15px 0 -15px;
+      margin: -21px -15px 0 -7px;
     }
     &__search {
       flex: 1 1 auto;
@@ -25,22 +25,22 @@
     }
   }
 
-// Large devices (desktops) and below: <= 1200px
+// Large devices (desktops) and below: < 1200px
 @include media-breakpoint-down(lg) {
   // add/overwrite styles for responsive level lg and lower
 }
 
-// Medium devices (tablets) and below: <= 992px
+// Medium devices (tablets) and below: < 992px
 @include media-breakpoint-down(md) {
   // add/overwrite styles for responsive level md and lower
 }
 
-// Small devices (landscape phones) and below: <= 768px
+// Small devices (landscape phones) and below: < 768px
 @include media-breakpoint-down(sm) {
   // add/overwrite styles for responsive level sm and lower
 }
 
-// Extra small devices (portrait phones): <= 576px
+// Extra small devices (portrait phones): < 576px
 @include media-breakpoint-down(xs) {
   // add/overwrite styles for responsive level xs
 }
